fixed view bug on mobile devices

--- a/style.css
+++ b/style.css
@@ -1043,8 +1043,8 @@ footer {
     .restaurant-info,
     .allergenic,
     .order-successful {
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
     }
     .google-maps {
         height: 200px;
@@ -1095,8 +1095,8 @@ footer {
     .restaurant-info,
     .allergenic,
     .order-successful {
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
     }
     .menu-icon {
         position: absolute;
